manifests/wordpress/ingress-amoc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ingress-wordpress-ccrow
  namespace: amoc
spec:
  ingressClassName: nginx
  rules:
  - host: www.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: amoc-wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: ccrow.org
    http:
      paths:
      - backend:
          service:
            name: amoc-wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.ccrow.org
    - ccrow.org
    secretName: ccrow-tls
