manifests/wordpress/ingress-art.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ingress-wordpress-art
  namespace: art
spec:
  ingressClassName: nginx
  rules:
  - host: art.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: art-wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - art.ccrow.org
    secretName: art5-tls
