manifests/wordpress/ingress-hhk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    # using dns challenge doesn't work because we didn't set it up for this domain
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: nginx
  name: ingress-wordpress-hhk
  namespace: hhk
spec:
  ingressClassName: nginx
  rules:
  - host: happyhourknits.us
    http:
      paths:
      - backend:
          service:
            name: hhk-wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: www.happyhourknits.us
    http:
      paths:
      - backend:
          service:
            name: hhk-wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - happyhourknits.us
    - www.happyhourknits.us
    secretName: hhk-tls
